# pyProject6

./: .coverage  .flake8  README.md  file1.py  file2.py  pyproject.toml
src/: generators.py  masks.py  processing.py  widget.py
tests/: test_generator.py  test_masks.py  test_processing.py  test_widget.py
